# fiasto-py

./: .gitignore  CHANGELOG.md  Cargo.toml  PYPI_GUIDE.md  README.md  build.py  example.py  main.py  publish.py  pyproject.toml  release.py
.github/workflows/: release.yml
src/: lib.rs
tests/: test_interactions.py  test_multiway_interaction.py
