[package]
name = "fiasto-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "fiasto_py"
crate-type = ["cdylib"]

[dependencies]
fiasto = "0.2.4"
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.21"
