[project]
name = "fiasto-py"
version = "0.1.4"
description = "Python bindings for fiasto - A language-agnostic modern Wilkinson's formula parser and lexer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Alex Hallam", email = "alex@example.com" }]
maintainers = [{ name = "Alex Hallam", email = "alex@example.com" }]
keywords = [
    "formula",
    "parser",
    "statistics",
    "mixed-effects",
    "wilkinson",
    "rust",
    "pyo3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alexhallam/fiasto-py"
Repository = "https://github.com/alexhallam/fiasto-py"
Documentation = "https://github.com/alexhallam/fiasto-py#readme"
"Bug Tracker" = "https://github.com/alexhallam/fiasto-py/issues"
Changelog = "https://github.com/alexhallam/fiasto-py/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "fiasto_py"
